# MSMARCO-Search-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  examples.txt  results.test  results.txt  results1  results10  results11  results2  results3  results4  results5  results6  results7  results8  results9  searchengine.cpp  stopwords.txt
MSMARCO-Search-Engine/: CMakeLists.txt  MSMARCO-Search-Engine.cpp  MSMARCO-Search-Engine.h
apps/: CMakeLists.txt  app.cpp  compress.cpp  lexicon.cpp  merge.cpp  parse.cpp  query.cpp  spimi.cpp
docs/: CMakeLists.txt
include/MSMARCO-Search-Engine/: compressing.hpp  disk_hash_map.hpp  disk_vector.hpp  doc_table.hpp  inverted_index.h  inverted_index.hpp  io.hpp  lexicon.hpp  merging.hpp  model.hpp  parsing.hpp  query.hpp  scoring_functions.hpp  simple9.hpp  util.hpp
inverted_index/: CMakeLists.txt  MSMARCO-Search-Engine.cpp
output/: lexicon
results/: doc_table  inverted_index  lexicon  results1  results10  results11  results2  results3  results4  results5  results6  results7  results8  results9
src/: CMakeLists.txt  compressing.cpp  disk_hash_map.cpp  disk_vector.cpp  doc_table.cpp  inverted_index.cpp  io.cpp  lexicon.cpp  merging.cpp  parsing.cpp  parsing_parallel.cpp  posting_list.cpp  query.cpp  scoring_functions.cpp  simple9.cpp
tests/: CMakeLists.txt  compressing_test.cpp  doc_table_test.cpp  hash_map_test.cpp  lexicon_test.cpp  posting_lists_test.cpp  test.cpp  tokenizer_test.cpp  vector_test.cpp
